# jaxsparrow

./: .gitignore  LICENSE  README.md  TODOs.py  TODOs.txt  _dbd_wrapper.py  dbd_tests.py  dbd_wrapper_example.py  ideas.md  mpc_types.py  new_solver.py  pyproject.toml  solver.py  solver_dense.py  solver_dense_old.py  test_mpc.py  test_mpc_batch.py  test_mpc_closed_loop.py  todos.md
code_explanation/: build_solver.md  converter.md  diff_backends.md  diff_numpy.md  setup_sparse_or_dense_solver.md  solver_numpy.md
docs/: explanation.md
examples/: benchmark_jacobian.py  benchmark_jacobian_rev.py  benchmark_jacobian_rev_sparse.py  benchmark_jacobian_sparse.py  finite_difference_example.py  sparse_benchmarks.py  test_mpc.py  test_mpc_batch.py  test_mpc_closed_loop.py  test_mpc_closed_loop_vjp.py
examples/dense/: benchmark_jacobian.py  benchmark_jacobian_rev.py  example_envelope.py  example_mpc.py  example_mpc_batch_dbd.py  example_mpc_closed_loop.py  example_mpc_closed_loop_vjp.py  finite_difference_example.py  test_mpc.py  test_mpc_batch.py  test_mpc_closed_loop.py  test_mpc_closed_loop_vjp.py
examples/sparse/: benchmark_jacobian_rev_sparse.py  benchmark_jacobian_sparse.py  example_mpc_batch_sparse.py  example_mpc_closed_loop_sparse.py  example_mpc_closed_loop_vjp_sparse.py  example_mpc_sparse.py  qpax_comparison.py  test_mpc_batch_sparse.py  test_mpc_closed_loop_sparse.py  test_mpc_closed_loop_vjp_sparse.py  test_mpc_sparse.py
jaxsparrow/: __init__.py  _envelope.py  _options_common.py  _solver_common.py  _types_common.py
jaxsparrow/_solver_dense/: _converters.py  _dense_dbd_diff_backend.py  _dense_diff_backend.py  _differentiators.py  _options.py  _setup.py  _solvers.py  _types.py
jaxsparrow/_solver_sparse/: _converters.py  _differentiators.py  _options.py  _setup.py  _solvers.py  _sparse_dbd_diff_backend.py  _sparse_diff_backed.py  _sparse_diff_backend.py  _types.py
jaxsparrow/_utils/: _diff_backends.py  _fd_recorder.py  _linear_solvers.py  _options_utils.py  _parsing_utils.py  _printing_utils.py  _qp_analyzer.py  _qp_backends.py  _solver_backends.py  _sparse_utils.py
jaxsparrow/utils/: __init__.py
solver_dense/: kkt_diff.py  new_test_solver_dense.py  printing_utils.py  solver_dense.py  solver_dense_options.py  test_solver_dense.py
src/: options_common.py  solver_common.py
src/solver_dense/: converters.py  differentiators.py  linear_solvers.py  options.py  setup.py  solver_dense.py  solver_dense_options.py  solver_dense_types.py  solver_dense_vjp.py  solvers.py
src/solver_sparse/: converters.py  differentiators.py  options.py  setup.py  solvers.py  types.py
src/utils/: fd_recorder.py  sparse_utils.py  timing_utils.py
tests/: new_test_solver_dense.py  test_dbd_dense.py  test_dbd_sparse.py  test_envelope.py  test_examples.py  test_linear_solvers.py  test_solver_dense.py  test_sparse_solver.py
