[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "jaxsparrow"
version = "1.0.0"
description = "JAX - Sensitivity for PARametric Optimization (Wow!)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Riccardo Zuliani" },
]
keywords = ["jax", "optimization", "qp", "sensitivity", "mpc", "autodiff"]
dependencies = [
    "jax>=0.9.0",
    "jaxlib>=0.9.0",
    "jaxtyping>=0.3.0",
    "ml_dtypes>=0.5.0",
    "numpy>=2.4.0",
    "opt_einsum>=3.4.0",
    "piqp>=0.6.0",
    "qpsolvers>=4.11.0",
    "scipy>=1.17.0",
    "osqp>=1.1.0",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
test = ["pytest>=9.0"]
plot = ["matplotlib>=3.10"]
dev = ["pytest>=9.0", "matplotlib>=3.10"]

[project.urls]
Homepage = "https://github.com/RiccardoZuliani98/jaxsparrow"
Repository = "https://github.com/RiccardoZuliani98/jaxsparrow"
Issues = "https://github.com/RiccardoZuliani98/jaxsparrow/issues"

# ── Hatch build config ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["jaxsparrow"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"