[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxsparrow"
version = "1.0.0"
description = "JAX - Sensitivity for PARametric Optimization (Wow!)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Riccardo Zuliani" },
]
keywords = ["jax", "optimization", "qp", "sensitivity", "mpc", "autodiff"]
dependencies = [
    "jax>=0.10.0",
    "piqp>=0.6.3",
    "qpsolvers>=4.12.0",
    "cvxpy>=1.9.2",
    "jaxtyping>=0.3.11"
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
test = ["pytest>=9.0"]
plot = ["matplotlib>=3.10"]
dev = ["pytest>=9.0", "matplotlib>=3.10"]

[project.urls]
Homepage = "https://github.com/RiccardoZuliani98/jaxsparrow"
Repository = "https://github.com/RiccardoZuliani98/jaxsparrow"
Issues = "https://github.com/RiccardoZuliani98/jaxsparrow/issues"

# ── Hatch build config ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["jaxsparrow"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"