[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jaxsparrow"
version = "1.0.0"
description = "JAX - Sensitivity for PARametric Optimization (Wow!)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Riccardo Zuliani" },
]
keywords = ["jax", "optimization", "qp", "sensitivity", "mpc", "autodiff"]
dependencies = [
    "jax",
    "piqp",
    "qpsolvers",
    "cvxpy",
    "jaxtyping"
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.optional-dependencies]
test = ["pytest"]
plot = ["matplotlib"]
dev = ["pytest", "matplotlib"]

[project.urls]
Homepage = "https://github.com/RiccardoZuliani98/jaxsparrow"
Repository = "https://github.com/RiccardoZuliani98/jaxsparrow"
Issues = "https://github.com/RiccardoZuliani98/jaxsparrow/issues"

# ── Hatch build config ──────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
packages = ["jaxsparrow"]

# ── Pytest ───────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"